syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.nemo.grpcexampleserver";
option java_outer_classname = "ServerProto";

import "server-entity.proto";

package server;

service ExampleService {
    // 普通方式传输
    rpc sayHelloWorld(StringRequest) returns (StringResponse);
}
